--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql": "^2.18.1",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.29.0",
